--- a/app/views/application/_results.html.erb
+++ b/app/views/application/_results.html.erb
@@ -1,7 +1,7 @@
 <% if cannot?(:read, model_class) %>
-<p> <% @results.total %> for all <% thing %> </p>
-    
-    <%= render 'result_teaser' %> 
+<p> <% @results.results.total %> for all <% thing %> </p>
+
+    <%= render 'result_teaser' %>
 <h2> Subscribe to see these <%= things %>! </h2>
 
 
@@ -11,7 +11,7 @@
         <%= link_to('<i class="icon-download"></i> XLS'.html_safe, {:format => "csv",:search_id => @search.id}) %>
     </div>
     <% end %>
-    <div class="resultcount"> <%= @results.total %> for all <%= things %> </div>
+    <div class="resultcount"> <%= @results.results.total %> for all <%= things %> </div>
 
     <table id="searchResults" class="table">
       <tr>
