--- a/app/views/common/_save_search.html.erb
+++ b/app/views/common/_save_search.html.erb
@@ -1,14 +1,18 @@
-    <div id="save-search-dialog" class="modal hide fade">
-    <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-    <h3>Name this search</h3>
-    </div>
-    <div class="modal-body">
-    <p><input name="searchname"></p>
-    </div>
-    <div class="modal-footer">
-    <a href="#" class="btn" data-dismiss="modal">Close</a>
-   <%= submit_tag "Save", :class => "btn btn-primary" %>
-    </div>
-    </div>
-    <script> $( function () { $("input[name=searchname]").val("") } ); </script>
+<div id="save-search-dialog" class="modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Name this search</h4>
+      </div>
+      <div class="modal-body">
+        <p><input name="searchname"></p>
+      </div>
+      <div class="modal-footer">
+        <a href="#" class="btn" data-dismiss="modal">Close</a>
+        <%= submit_tag "Save", :class => "btn btn-primary" %>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+<script> $( function () { $("input[name=searchname]").val("") } ); </script>
