--- a/app/views/common/_save_search.html.erb
+++ b/app/views/common/_save_search.html.erb
@@ -6,7 +6,7 @@
         <h4 class="modal-title">Name this search</h4>
       </div>
       <div class="modal-body">
-        <p><input name="searchname"></p>
+        <p><input name="searchname" autofocus></p>
       </div>
       <div class="modal-footer">
         <a href="#" class="btn" data-dismiss="modal">Close</a>
